force-app/main/default/objects/Product_Option__c/Product_Option__c.object-meta.xml
<CustomObject>
    <label>Product Option</label>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Option</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>