force-app/main/default/objects/Product_Option__c/fields/Allow_scheduling__c.field-meta.xml
<CustomField>
    <fullName>Allow_scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow_scheduling</label>
    <type>Checkbox</type>
</CustomField>