force-app/main/default/objects/Product_Option__c/fields/Available_for_Booking__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Booking</label>
    <type>Checkbox</type>
</CustomField>