force-app/main/default/objects/Product_Option__c/fields/Available_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock_Quantity__c</fullName>
    <label>Available Stock Quantity</label>
    <summarizedField>Product_Option_Component__c.Available_Stock_Quantity__c</summarizedField>
    <summaryForeignKey>Product_Option_Component__c.Product_Option__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>