force-app/main/default/objects/Product_Option__c/fields/Avialable_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Avialable_End_Time__c</fullName>
    <label>Avialable_End_Time</label>
    <type>Time</type>
</CustomField>