force-app/main/default/objects/Product_Option__c/fields/Is_Option_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Option_Available__c</fullName>
    <formula>IF(  Available_Stock_Quantity__c  &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Option Available</label>
    <type>Checkbox</type>
</CustomField>