force-app/main/default/objects/Product_Option__c/fields/Option_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Option_Total_Price__c</fullName>
    <label>Option Total Price</label>
    <summarizedField>Product_Option_Component__c.Unit_Price__c</summarizedField>
    <summaryForeignKey>Product_Option_Component__c.Product_Option__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>