force-app/main/default/objects/Product_Option__c/listViews/Scheduling.listView-meta.xml
<ListView>
    <fullName>Scheduling</fullName>
    <columns>NAME</columns>
    <columns>Available_for_Booking__c</columns>
    <columns>Available_Stock_Quantity__c</columns>
    <columns>Available_From_Time__c</columns>
    <columns>CalendarSYS_Key__c</columns>
    <columns>Avialable_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allow_scheduling__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Scheduling</label>
</ListView>